sass/main.scss
$pink-400: #c35;
$pink-200: #f5b2c8;

$blue-300: #9fd6fa;
$blue-500: #234;

$grey-400: #555;
$grey-300: #b9b9b9;
$grey-200: #fafafa;
$grey-100: #ddd;

/* Tiny reset */

html,
body,
div,
form,
fieldset,
legend,
label,
h1,
h2 {
  margin: 0;
  padding: 0;
}

/* Style */

html,
body {
  height: 100%;
}

body {
  font-family: Georgia, Times, serif;
  font-size: 120%;
  line-height: 1.58;
  border-top: 0.5em solid $pink-400;
}

.container {
  display: flex;
  flex-direction: column;
  margin: 0px auto;
  margin-top: 70px;
}

header {
  font-size: 0.8em;
  text-align: center;
}

.logo {
  width: 175px;
  height: 153px;
  margin: auto;
}

.bio {
  width: 210px;
  margin: auto;
  padding: 16px;
}

main {
  padding: 20px;
  margin-bottom: 50px;
  max-width: 650px;
}

a {
  border-bottom: 1px dashed $pink-400;
}

a:hover {
  border-bottom: 2px solid $pink-400;
}

figure a {
  border: none;
}

figure a:hover {
  border: none;
}

.logo a,
nav a,
nav a:hover {
  border-bottom: none;
}

main article {
  margin-bottom: 44px;
}

main img {
  max-width: 100%;
}

main video {
  max-width: 100%;
}

.homepage h1 {
  font-size: 130%;
}

@media screen and (max-width: 640px) {
  body {
    font-size: 110%;
  }
}

@media screen and (min-width: 800px) {
  .container {
    flex-direction: row;
    max-width: 900px;
  }

  main {
    padding: 0px 30px;
    margin-left: 30px;
  }
}

h1,
h2,
h3,
h4,
h5,
h6,
th,
td,
caption {
  font-weight: 400;
}

.post-meta {
  color: $grey-400;
  font-style: italic;
  margin: 0px;
  font-size: 90%;
}

.homepage .post-meta {
  font-size: 80%;
}

code {
  background: $grey-200;
  border-radius: 6px;
  display: inline-block;
  font-family: "Courier New", "Courier", monospace;
  -moz-font-feature-settings: "liga" off;
  font-feature-settings: "liga" off;
  font-size: 16px;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: subpixel-antialiased;
  max-width: 100%;
  overflow-x: auto;
  padding: 0 5px;
  vertical-align: middle;
  word-wrap: normal;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125);
}

blockquote {
  border-left: 4px solid $blue-300;
  font-style: italic;
  margin: 4px 10px;
  padding: 3px 20px;
}

pre {
  padding: 10px;
  border-radius: 6px;
  overflow-x: auto;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125);
}

h1 {
  font-size: 1.87em;
  margin-bottom: 8px;
}

h2 {
  font-size: 1.2em;
}

h3 {
  margin-top: 0px;
  font-style: italic;
}

::selection {
  background: black;
  color: white;
}

// Anchor tags
a {
  color: $pink-400;
  text-decoration: none;
}

header nav ul {
  display: inline-block;
  padding-left: 0px;
}

header nav li {
  list-style: none;
  display: inline;
}

.icon {
  text-indent: -9999px;
  height: 14px;
  width: 14px;
  opacity: 0.4;
  float: left;
  padding: 5px;
  margin: 5px;
}

.icon:hover {
  opacity: 1;
}

.home-icon {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1' viewBox='0 0 61 58'%3E%3Cpath stroke='%23fff' stroke-linecap='square' stroke-width='.52916' d='M7 21v36h16V38h15v19h15V21z'/%3E%3Cpath d='M61 26H0l15-13L30 0l15 13z'/%3E%3C/svg%3E ");
}

.twitter-icon {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1' viewBox='0 0 612 612'%3E%3Cpath fill='%23010002' d='M612 116c-23 10-47 17-72 20 26-15 46-40 55-69-24 14-51 24-80 30a125 125 0 0 0-217 86c0 10 1 19 3 29-104-6-196-56-258-132a125 125 0 0 0 39 168c-21-1-40-6-57-16v2c0 61 43 111 100 123a127 127 0 0 1-56 2c16 50 62 86 117 87A252 252 0 0 1 0 498a355 355 0 0 0 550-301l-1-16c25-17 46-40 63-65z'/%3E%3C/svg%3E ");
}

.rss-icon {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1' viewBox='0 0 1280 1280'%3E%3Cpath d='M264 224l-1 79v79h8a660 660 0 0 1 438 174 665 665 0 0 1 218 492h156l1-26a820 820 0 0 0-715-792c-37-5-103-9-105-6z'/%3E%3Cpath d='M263 504l-1 78 1 79 14 2a383 383 0 0 1 369 368l1 17h158v-19a536 536 0 0 0-98-293 546 546 0 0 0-444-232zM353 830a110 110 0 0 0-77 160 110 110 0 1 0 188-114c-5-7-23-25-30-29-25-16-54-22-81-17z'/%3E%3C/svg%3E");
}

.button {
  background-color: $pink-400;
  padding: 10px;
  color: white;
}

figure {
  font-size: 0.9em;
  font-style: italic;
  margin: 40px 0 40px;
  padding: 0;
  text-align: center;
  text-indent: 0;
}

figure img {
  width: 100%;
}

figcaption {
  margin-top: 10px;
}

.comments {
  list-style: none;
  display: inline;
}

#teaser {
  background: $pink-400;
  color: $pink-200;
}

#teaser a {
  color: white;
}

#teaser a::after {
  content: "\a0»";
}

footer {
  background: $blue-500;
  color: $grey-300;
}

#teaser .body,
footer .body {
  max-width: 800px;
  margin: 0 auto;
  padding: 40px;
}

.email {
  background-color: white;
}

.submit {
  background-color: $grey-300;
}

footer .field {
  padding: 10px;
  font-size: 0.8em;
  border: none;
}

.autocomplete {
  position: relative;
  display: inline-block;
}

.autocomplete input {
  border: 1px solid $grey-100;
  padding: 10px 20px;
  border-radius: 20px;
  width: 150px;
  font-size: 0.9em;
}

input[type="submit"] {
  cursor: pointer;
}

input:focus::placeholder {
  color: transparent;
}

.autocomplete-items {
  position: absolute;
  left: 0;
  top: 38px;
  font-size: 0.9em;
  line-height: 1.5;
  width: 100%;
}

.autocomplete-items div {
  padding: 10px;
  cursor: pointer;
  background-color: white;
  border: 1px solid $grey-100;
}

.autocomplete-items div:hover {
  background-color: $grey-200;
}

.autocomplete-active {
  background-color: $pink-400 !important;
  color: white;
}

@media screen and (max-width: 800px) {
  .autocomplete {
    width: 100%;
  }
  .autocomplete input {
    width: 90%;
    margin: 0px 10px;
    border-radius: 0px;
    font-size: 1.1em;
  }
  .autocomplete-items {
    font-size: 1.1em;
  }
}

.tldr {
  padding: 65px 20px 20px 20px;
  margin: 30px 0;
  background-color: lightyellow;
  border: 4px solid peachpuff;
  position: relative;
}

.tldr:after {
  content: "Summary";
  position: absolute;
  top: 0;
  left: 0;
  font-size: 1.3em;
  color: grey;
  padding: 15px 20px;
}

